fix(package): adjusted the alignment in the info component #158

--- a/src/module/component/mat-password-strength-info/mat-password-strength-info.component.scss
+++ b/src/module/component/mat-password-strength-info/mat-password-strength-info.component.scss
@@ -4,7 +4,7 @@ mat-card {
   display: flex;
   place-content: stretch center;
   align-items: stretch;
-  flex: 1 1 0%;
+  flex: 1 1 0;
 
   mat-card-content {
     flex-direction: column;
@@ -22,6 +22,7 @@ mat-card {
       flex-direction: row;
       box-sizing: border-box;
       display: flex;
+      align-items: center;
     }
 
   }
